[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Plot.gd" type="Script" id=1]
[ext_resource path="res://Sprites/plot.jpeg" type="Texture" id=2]
[ext_resource path="res://Scenes/Blocks/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Blocks/Floor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Blocks/Roof.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 256, 256 )

[node name="Plot" type="Area2D"]
script = ExtResource( 1 )
gridSize = null
blocks = [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ) ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 256, 256 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
[connection signal="body_entered" from="." to="." method="_on_Plot_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Plot_body_exited"]
[connection signal="input_event" from="." to="." method="_on_Plot_input_event"]
